{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 42,
  "lineage": "4374bbeb-1ba3-7e2d-67b8-3268cadbba65",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/networkInterfaces/management1-nic",
            "internal_domain_name_suffix": "gntb032fzprurdz3ielz2lydxd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/publicIPAddresses/pubip1",
                "subnet_id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/virtualNetworks/WorkshopVNet/subnets/managementNet"
              }
            ],
            "location": "westeurope",
            "name": "management1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "infrastructure2.0-TF"
          },
          "dependencies": [
            "azurerm_public_ip.managementinstance1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/networkSecurityGroups/workshopNSG",
            "location": "westeurope",
            "name": "workshopNSG",
            "resource_group_name": "infrastructure2.0-TF",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/networkSecurityGroups/workshopNSG/securityRules/AllowICMP",
            "name": "AllowICMP",
            "network_security_group_name": "workshopNSG",
            "priority": 3000,
            "protocol": "ICMP",
            "resource_group_name": "infrastructure2.0-TF",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/networkSecurityGroups/workshopNSG/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "workshopNSG",
            "priority": 1001,
            "protocol": "TCP",
            "resource_group_name": "infrastructure2.0-TF",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/networkSecurityGroups/workshopNSG/securityRules/AllowWeb80",
            "name": "AllowWeb80",
            "network_security_group_name": "workshopNSG",
            "priority": 1000,
            "protocol": "TCP",
            "resource_group_name": "infrastructure2.0-TF",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "managementinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/publicIPAddresses/pubip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pubip1",
            "resource_group_name": "infrastructure2.0-TF",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "managementinstance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/publicIPAddresses/pubip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pubip2",
            "resource_group_name": "infrastructure2.0-TF",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/virtualNetworks/WorkshopVNet/subnets/managementNet",
            "name": "managementNet",
            "resource_group_name": "infrastructure2.0-TF",
            "virtual_network_name": "WorkshopVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.workshopnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "workshopnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "771d6633-cb85-48e3-8f3d-41179e2f03bb",
            "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/virtualNetworks/WorkshopVNet",
            "location": "westeurope",
            "name": "WorkshopVNet",
            "resource_group_name": "infrastructure2.0-TF",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/610992b8-1492-49c7-8f44-46f898ccd29b/resourceGroups/infrastructure2.0-TF/providers/Microsoft.Network/virtualNetworks/WorkshopVNet/subnets/managementNet",
                "name": "managementNet"
              }
            ],
            "tags": {
              "environment": "Terraform workshop VNET"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}